fix cta's alignment

--- a/ui.frontend/src/components/CTA/cta.scss
+++ b/ui.frontend/src/components/CTA/cta.scss
@@ -39,6 +39,8 @@ $min-button-width: 173px;
   text-transform: var(--links-text-transform);
   justify-self: center;
   margin-top: map.get(abstracts.$spacing, 'medium-2');
+  margin-left: calc(var(--gutter) / 2);
+  margin-right: calc(var(--gutter) / 2);
 
   @include abstracts.media-breakpoint-up(md) {
     margin-top: map.get(abstracts.$spacing, 'medium-4');
